--- a/styles/layout.css
+++ b/styles/layout.css
@@ -89,7 +89,7 @@
         .start-and-end {
             display: grid;
             gap: 1rem;
-            grid-template-columns: repeat(2, 17rem);
+            grid-template-columns: repeat(2, auto);
             position: relative;
             
             input[type="datetime-local"] {
@@ -223,5 +223,60 @@
         width: 1.25rem;
         height: 1.25rem;
         opacity: 0;
+    }
+}
+
+@media (width <= 1024px) {
+
+    #app {
+        grid-template-columns: 32.79% 65.21%;
+        grid-template-areas:
+        "main main";
+
+        & aside {
+            display: none;
+        }
+
+        & main {
+            padding-inline: 0;
+        }
+    }
+}
+
+@media (width <= 768px) {
+
+    .about-event {
+
+        .event {
+            
+            .start-and-end {
+                grid-template-columns: repeat(1, auto);
+            }
+
+            .type-and-local {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                .options-container {
+                    height: 100px;
+                }
+            }
+        }
+    }
+
+    .select-colors .colors {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+    }
+}
+
+@media (width <= 425px) {
+    .invitation {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 1.5rem;
     }
 }
