--- a/styles/card.css
+++ b/styles/card.css
@@ -50,3 +50,14 @@
         }
     }
 }
+
+@media (width <= 768px) {
+    .event-theme {
+        & .cards {
+            justify-content: center;
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: .5rem;
+        }
+    }
+}
