--- a/styles/global.css
+++ b/styles/global.css
@@ -4,6 +4,39 @@
     box-sizing: border-box;
 }
 
+:root {
+    --brand-light: #59B2FF;
+    --brand-mid: #3487CF;
+    --brand-dark: #1D6FB6;
+
+    --danger: #FF5959;
+
+    --input-base: #1C1F21;
+    --input-stroke: #363B40;
+    --input-placeholder: #869198;
+
+    --shape-background: #131516;
+    --shape-body: #212427;
+    --shape-button: #2D3136;
+    --shape-hover: #383D42;
+
+    --text-body: #C8CDD0;
+    --text-heading: #F9F9F9;
+
+    --font-logo: "Leckerli One", cursive;
+    --font-header: "Baloo 2", sans-serif;
+    --font-body: "Open Sans", sans-serif;
+
+    --logo: 400 2.5rem var(--font-logo);
+
+    --heading-md: bold 1.75rem var(--font-header);
+    --heading-sm: bold 1.125rem var(--font-header);
+
+    --body-md: 400 1rem var(--font-body);
+    --body-sm: 400 .875rem var(--font-body);
+    --body-xs: 400 .75rem var(--font-body);
+}
+
 body {
     background-color: var(--shape-background);
     overflow: auto;
@@ -14,14 +47,13 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--brand-dark);
+    background-color: var(--shape-body);
     border-radius: 8px;
 }
 
 h1 {
     font: var(--heading-md);
     color: var(--text-heading);
-    /* margin-bottom: 2.5rem; */
 }
 
 legend {
@@ -79,4 +111,10 @@ input, textarea, .options-container {
 
 .colors, .event-theme .cards {
     margin-top: 1rem;
+}
+
+@media (width <= 1024px) {
+    body {
+        background-color: var(--shape-body);
+    }
 }
